# platform

./: .coverage  .gitignore  .golangci.yml  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  README.md  ROADMAP.md  TODO.md  devbox.json  flake.nix  go.mod  go.sum  justfile  pyproject.toml
.github/: dependabot.yml  renovate.json5
.github/repo-config/: repo-settings.json  ruleset-master.json
.github/workflows/: build.yml  cloudflare.yml  lint.yml  local.yml  nix.yml  preview-teardown.yml  preview.yml  publish.yml  release.yml  run.yml  sast.yml  spaces.yml  teardown.yml  test.yml  update.yml  velero.yml  vendor-hash.yml
.skylos/cache/: dependency_versions.json  grep_results.json  osv_cache.json  pypi_exists.json  python_api_surface.json
cmd/dctl/: main.go
flux/: README.md  echo.yaml  helmrepository.yaml  kustomization.yaml  namespace.yaml  velero.yaml
flux/cluster/: cert-manager-config.yaml  cert-manager.yaml  cloudnativepg.yaml  eso-config.yaml  eso.yaml  kustomization.yaml  kyverno.yaml  trivy.yaml  velero.yaml
flux/cluster/cert-manager/: release.yaml
flux/cluster/cert-manager-config/: issuer.yaml
flux/cluster/cloudnativepg/: release.yaml  repository.yaml
flux/cluster/eso/: certificate.yaml  namespace.yaml  release.yaml  repository.yaml
flux/cluster/eso-config/: cluster-secret-store.yaml
flux/cluster/kyverno/: release.yaml  repository.yaml
flux/cluster/trivy/: release.yaml  repository.yaml
flux/cluster/velero/: kustomization.yaml  release.yaml  repository.yaml
flux/echo/: deployment.yaml  ingress.yaml  service.yaml
flux/ingress/external-dns/: external-secret.yaml  release.yaml
flux/ingress/letsencrypt/: clusterissuer.yaml  external-secret.yaml  kustomization.yaml
flux/ingress/traefik/: certificate.yaml  external-secret-origin-tls.yaml  kustomization.yaml  release.yaml
flux/ingress/tunnel/: external-secret.yaml  kustomization.yaml  namespace.yaml  release.yaml  repository.yaml
flux/local/: backup.yaml  kustomization.yaml  velero.yaml
flux/local/backup/: credential.yaml  kustomization.yaml  target.yaml
flux/local/seaweedfs/: cluster.yaml  kustomization.yaml  operator.yaml
flux/local/seaweedfs/cluster/: bucket.yaml  kustomization.yaml  s3-config.yaml  seaweed.yaml
flux/local/seaweedfs/operator/: namespace.yaml  release.yaml  repository.yaml
flux/velero/: helmrelease.yaml  kustomization.yaml
internal/clients/cloudflare/: cloudflare.go
internal/clients/digitalocean/: clusters.go  errors.go  spaces.go  store.go
internal/clients/flux/: flux.go
internal/clients/kube/: kube.go  kustomization.go  status.go  teardown.go
internal/clients/local/: clusters.go  errors.go
internal/commands/: digitalocean.go  docluster.go  local.go  root.go  root_test.go
internal/commands/digitalocean/: cluster.go  do.go  space.go
internal/commands/flux/: flux.go
internal/commands/local/: local.go
internal/core/digitalocean/: clusters.go  clusters_test.go  link.go  link_test.go  spaces.go  spaces_test.go
internal/core/flux/: flux.go  flux_test.go
internal/core/local/: clusters.go  clusters_test.go
internal/core/teardown/: resolve.go  resolve_test.go  teardown.go  teardown_test.go
internal/render/: render.go
internal/version/: version.go
src/dantofa/cli/: main.py
src/dantofa/clients/digitalocean/: clusters.py  errors.py  spaces.py
src/dantofa/clients/local/: clusters.py  errors.py
src/dantofa/commands/: utils.py
src/dantofa/commands/digitalocean/: app.py  clusters.py  spaces.py
src/dantofa/commands/local/: app.py  clusters.py
src/dantofa/core/: greeting.py  meta.py
src/dantofa/core/digitalocean/: clusters.py  spaces.py
src/dantofa/core/local/: clusters.py
tests/: test_core.py  test_main.py
tests/cli/: test_main.py
tests/clients/digitalocean/: test_clusters.py  test_spaces.py
tests/clients/local/: test_clusters.py
tests/commands/digitalocean/: test_clusters.py  test_spaces.py
tests/commands/local/: test_clusters.py
tests/core/: test_core.py
tests/core/digitalocean/: test_clusters.py  test_spaces.py
tests/core/local/: test_clusters.py
