[project]
name = "dantofa-cli"
dynamic = ["version"]
description = "Daantofa cli utility"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer>=0.16.0"]

[project.scripts]
dctl = "dantofa.cli.main:run"
"dantofa.cli" = "dantofa.cli.main:run"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from git tags (e.g. `v0.1.0` -> `0.1.0`)
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/dantofa"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
include = ["src", "tests"]
reportCallInDefaultInitializer = false

# Enforce the thin-command-layer rule: core holds all logic and must not depend
# on the CLI layer or its framework. See CLAUDE.md "Architecture".
[tool.importlinter]
root_packages = ["dantofa"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core stays framework- and CLI-free"
type = "forbidden"
source_modules = ["dantofa.core"]
forbidden_modules = ["dantofa.cli", "typer", "click"]

[dependency-groups]
dev = [
  "basedpyright>=1.39.8",
  "import-linter>=2.11",
  "pre-commit>=4.6.0",
  "pytest>=9.1.1",
  "ruff>=0.15.18",
  "skylos>=4.25.0",
]
