[project]
name = "dantofa-saas"
dynamic = ["version"]
description = "Dantofa saas application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.16.0",
  "httpx >= 0.27",
  "boto3>=1.35",
  "botocore>=1.35",
  "zitadel-client",
  "kubernetes-asyncio>=31.1.1",
  "pydo>=0.37.0",
  "azure-core>=1.41.0",
]

[project.scripts]
dctl = "dantofa.cli.main:run"
"dantofa.cli" = "dantofa.cli.main:run"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from git tags (e.g. `v0.1.0` -> `0.1.0`)
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/dantofa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib import-mode + namespace awareness so the PEP 420 test tree (no
# __init__.py) can mirror the source layout, including same-named files like
# test_clusters.py under tests/{clients,core,commands}/digitalocean/.
addopts = "--cov --cov-report=term-missing --import-mode=importlib"
consider_namespace_packages = true
# Tests opt in per-function with @pytest.mark.asyncio (strict is the default).
asyncio_mode = "strict"

[tool.coverage.run]
source = ["src/dantofa"]
branch = true

[tool.coverage.report]
show_missing = true
# PEP 420 namespace packages (no __init__.py), so coverage must be told to
# descend into them — otherwise never-imported modules are silently omitted
# instead of reported at 0%.
include_namespace_packages = true
# TYPE_CHECKING blocks never execute at runtime, so they can't be covered.
exclude_also = ["if TYPE_CHECKING:"]

[tool.basedpyright]
include = ["src", "tests"]
reportCallInDefaultInitializer = false

# The clients/ layer is the adapter over untyped third-party SDKs (e.g.
# kubernetes_asyncio), so values crossing that boundary are unavoidably `Any`.
# Contain it here: relax the two Any-specific rules for this directory only,
# keeping core/ and cli/ fully strict where `Any` is a real smell.
[[tool.basedpyright.executionEnvironments]]
root = "src/dantofa/clients"
reportAny = false
reportExplicitAny = false

# unittest.mock objects (MagicMock/AsyncMock) are typed `Any`, so mock-based
# tests trip reportAny on every attribute access and assertion. Relax the two
# Any rules for the test tree only; production code under src/ stays strict.
# reportPrivateUsage is also off: tests legitimately exercise private helpers
# (e.g. k8s._with_retry) that have no public wrapper.
[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportAny = false
reportExplicitAny = false
reportPrivateUsage = false

# Enforce the thin-command-layer rule: core holds all logic and must not depend
# on the CLI layer or its framework. See CLAUDE.md "Architecture".
[tool.importlinter]
root_packages = ["dantofa"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core stays framework- and CLI-free"
type = "forbidden"
source_modules = ["dantofa.core"]
forbidden_modules = ["dantofa.cli", "typer", "click"]

[dependency-groups]
dev = [
  "basedpyright>=1.39.8",
  "boto3-stubs[all]>=1.43.36",
  "import-linter>=2.11",
  "mypy-boto3-s3>=1.43.31",
  "pre-commit>=4.6.0",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "respx>=0.23.1",
  "ruff>=0.15.18",
  "skylos>=4.25.0",
]
